--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "mgh",
   "version": "0.0.1",
-  "description": "",
+  "description": "Github API Mini CLI",
   "type": "module",
+  "bin": {
+    "mgh": "./dist/index.js"
+  },
   "scripts": {
+    "build": "esbuild src/cli/index.ts --sourcemap=inline --format=cjs --bundle --platform=node --target=node20 --outdir=dist",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
     "biome:check": "biome check --write"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "soukadao",
+  "license": "MIT",
+  "dependencies": {
+    "commander": "^14.0.2"
+  },
   "devDependencies": {
     "@biomejs/biome": "2.3.5",
     "@types/node": "^24.10.1",
     "@vitest/coverage-v8": "^4.0.8",
+    "esbuild": "^0.27.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
   }
