--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,8 +1,7 @@
-name: Perform a code review when a pull request is created.
+name: code review
 on:
   pull_request:
-    types: [opened]
-
+    types: [opened, synchronize]
 jobs:
   codex:
     runs-on: ubuntu-latest
@@ -10,10 +9,11 @@ jobs:
       contents: read
     outputs:
       final_message: ${{ steps.run_codex.outputs.final-message }}
+      review_comment: ${{ steps.parse_output.outputs.review_comment }}
+      needs_fix: ${{ steps.parse_output.outputs.needs_fix }}
     steps:
       - uses: actions/checkout@v5
         with:
-          # Explicitly check out the PR's merge commit.
           ref: refs/pull/${{ github.event.pull_request.number }}/merge
 
       - name: Pre-fetch base and head refs for the PR
@@ -22,47 +22,64 @@ jobs:
             ${{ github.event.pull_request.base.ref }} \
             +refs/pull/${{ github.event.pull_request.number }}/head
 
-      # If you want Codex to build and run code, install any dependencies that
-      # need to be downloaded before the "Run Codex" step because Codex's
-      # default sandbox disables network access.
-
       - name: Run Codex
         id: run_codex
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          output-schema-file: .github/schema/review.json
+          allow-bots: true
           prompt: |
             This is PR #${{ github.event.pull_request.number }} for ${{ github.repository }}.
 
-            Review ONLY the changes introduced by the PR, so consider:
-               git log --oneline ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }}
+            Review ONLY the changes introduced by this PR.
+            Use the following diff range for context:
+              git log --oneline ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }}
 
-            Suggest any improvements, potential bugs, or issues.
-            Be concise and specific in your feedback.
+            Provide concise, specific feedback covering improvements, potential bugs, security concerns, tests, and style.
+
+            Return your result as JSON with the exact shape:
+            {
+              "reviewComment": "<your review with actionable points>",
+              "needsFix": true | false
+            }
 
             Pull request title and body:
             ----
             ${{ github.event.pull_request.title }}
             ${{ github.event.pull_request.body }}
 
+      - name: Parse Codex output
+        id: parse_output
+        run: |
+          echo 'review_comment<<EOF' >> $GITHUB_OUTPUT
+          echo '${{ steps.run_codex.outputs.final-message }}' | jq -r '.reviewComment' >> $GITHUB_OUTPUT
+          echo 'EOF' >> $GITHUB_OUTPUT
+          echo "needs_fix=$(echo '${{ steps.run_codex.outputs.final-message }}' | jq -r '.needsFix')" >> $GITHUB_OUTPUT
+
   post_feedback:
     runs-on: ubuntu-latest
     needs: codex
-    if: needs.codex.outputs.final_message != ''
+    if: needs.codex.outputs.review_comment != ''
     permissions:
-      issues: write
       pull-requests: write
+      contents: write
+    env:
+      REVIEW_COMMENT: ${{ needs.codex.outputs.review_comment }}
+      NEEDS_FIX: ${{ needs.codex.outputs.needs_fix }}
     steps:
-      - name: Report Codex feedback
+      - name: Submit Review
         uses: actions/github-script@v7
-        env:
-          CODEX_FINAL_MESSAGE: ${{ needs.codex.outputs.final_message }}
         with:
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.GH_TOKEN }}
           script: |
-            await github.rest.issues.createComment({
+            const needsFix = process.env.NEEDS_FIX === 'true';
+            const reviewEvent = needsFix ? 'REQUEST_CHANGES' : 'COMMENT';
+
+            await github.rest.pulls.createReview({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.payload.pull_request.number,
-              body: process.env.CODEX_FINAL_MESSAGE,
+              pull_number: context.payload.pull_request.number,
+              body: process.env.REVIEW_COMMENT,
+              event: reviewEvent
             });
