--- a/.github/workflows/create-requirements.yml
+++ b/.github/workflows/create-requirements.yml
@@ -68,6 +68,8 @@ jobs:
     permissions:
       issues: write
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v5
       - run: gh issue edit $ISSUE_NUMBER --body "$CODEX_FINAL_MESSAGE"
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
