--- a/.github/workflows/question.yml
+++ b/.github/workflows/question.yml
@@ -47,12 +47,19 @@ jobs:
     permissions:
       issues: write
     steps:
+      - name: Get Token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
       - name: Answer
         uses: actions/github-script@v8
         env:
           CODEX_FINAL_MESSAGE: ${{ needs.answer.outputs.final_message }}
+          TOKEN: ${{ steps.app-token.outputs.token }}
         with:
-          github-token: ${{ github.token }}
+          github-token: $TOKEN
           script: |
             await github.rest.issues.createComment({
               owner: context.repo.owner,
