--- a/.github/workflows/code-auto-write.yml
+++ b/.github/workflows/code-auto-write.yml
@@ -66,14 +66,22 @@ jobs:
 
           echo "branch_name=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
 
+      - name: Get Token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+
       - name: create pull request
         uses: actions/github-script@v7
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           ISSUE_BODY: ${{ github.event.issue.body }}
           HEAD_BRANCH: ${{ steps.create_branch.outputs.branch_name }}
+          TOKEN: ${{ steps.app-token.outputs.token }}
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: $TOKEN
           script: |
             const issueNumber = process.env.ISSUE_NUMBER;
             const issueBody = process.env.ISSUE_BODY;
