--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -63,15 +63,22 @@ jobs:
     if: needs.codex.outputs.review_comment != ''
     permissions:
       pull-requests: write
-      contents: write
-    env:
-      REVIEW_COMMENT: ${{ needs.codex.outputs.review_comment }}
-      NEEDS_FIX: ${{ needs.codex.outputs.needs_fix }}
+      contents: write      
     steps:
+      - name: Get Token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
       - name: Submit Review
         uses: actions/github-script@v7
+        env:
+          REVIEW_COMMENT: ${{ needs.codex.outputs.review_comment }}
+          NEEDS_FIX: ${{ needs.codex.outputs.needs_fix }}
+          TOKEN: ${{ steps.app-token.outputs.token }}
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: $TOKEN
           script: |
             const needsFix = process.env.NEEDS_FIX === 'true';
             const reviewEvent = needsFix ? 'REQUEST_CHANGES' : 'COMMENT';
