--- a/.github/workflows/issue-triage.yml
+++ b/.github/workflows/issue-triage.yml
@@ -67,12 +67,20 @@ jobs:
       issues: write
 
     steps:
+      - name: Get Token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+
       - name: Apply Label to Issue
         uses: actions/github-script@v7
         env:
           TRIAGE_LABEL: ${{ needs.analyze_issue.outputs.triage_label }}
+          TOKEN: ${{ steps.app-token.outputs.token }}
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: $TOKEN
           script: |
             await github.rest.issues.addLabels({
               owner: context.repo.owner,
