--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -70,12 +70,23 @@ jobs:
     permissions:
       issues: write
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v5
-
-      - run: gh issue edit $ISSUE_NUMBER --body "$CODEX_FINAL_MESSAGE" --repo "$REPO"
+      - name: Get Token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+      - name: Update Issue Body
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
           CODEX_FINAL_MESSAGE: ${{ needs.update_requirements.outputs.final_message }}
-          REPO: ${{ github.repository }}
+          TOKEN: ${{ steps.app-token.outputs.token }}
+        uses: actions/github-script@v7
+        with:
+          github-token: $TOKEN
+          script: |
+            await github.rest.issues.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.issue.number,
+              body: process.env.CODEX_FINAL_MESSAGE
+            });
