--- a/.github/workflows/code-review-fix.yml
+++ b/.github/workflows/code-review-fix.yml
@@ -27,10 +27,8 @@ jobs:
       - name: Get all review comments
         id: get_reviews
         uses: actions/github-script@v7
-        env:
-          TOKEN: ${{ steps.app-token.outputs.token }}
         with:
-          github-token: $TOKEN
+          github-token: ${{ steps.app-token.outputs.token }}
           script: |
             const { data: reviews } = await github.rest.pulls.listReviews({
               owner: context.repo.owner,
