--- a/.github/workflows/create-requirements.yml
+++ b/.github/workflows/create-requirements.yml
@@ -72,10 +72,9 @@ jobs:
       - name: Update Issue Body
         env:
           CODEX_FINAL_MESSAGE: ${{ needs.format_requirements.outputs.final_message }}
-          TOKEN: ${{ steps.app-token.outputs.token }}
         uses: actions/github-script@v7
         with:
-          github-token: $TOKEN
+          github-token: ${{ steps.app-token.outputs.token }}
           script: |
             await github.rest.issues.update({
               owner: context.repo.owner,
