--- a/.github/workflows/issue-triage.yml
+++ b/.github/workflows/issue-triage.yml
@@ -78,9 +78,8 @@ jobs:
         uses: actions/github-script@v7
         env:
           TRIAGE_LABEL: ${{ needs.analyze_issue.outputs.triage_label }}
-          TOKEN: ${{ steps.app-token.outputs.token }}
         with:
-          github-token: $TOKEN
+          github-token: ${{ steps.app-token.outputs.token }}
           script: |
             await github.rest.issues.addLabels({
               owner: context.repo.owner,
