--- a/.github/workflows/issue-triage.yml
+++ b/.github/workflows/issue-triage.yml
@@ -40,6 +40,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          safety-strategy: read-only
           output-schema-file: .github/schema/issue-triage.json
           prompt: |
             Analyze this issue and determine the appropriate label.
