--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.issue.labels.*.name, 'requirements')
     permissions:
-      contents: read
+      issues: read
     outputs:
       final_message: ${{ steps.run_codex.outputs.final-message }}
 
@@ -22,6 +22,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          safety-strategy: read-only
           codex-args: |
             --enable web_search_request
           prompt: |
