--- a/.github/workflows/create-requirements.yml
+++ b/.github/workflows/create-requirements.yml
@@ -7,6 +7,7 @@ jobs:
     if: github.event.label.name == 'requirements'
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       issues: read
     outputs:
       final_message: ${{ steps.run_codex.outputs.final-message }}
