--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.issue.labels.*.name, 'requirements')
     permissions:
+      contents: read
       issues: read
     outputs:
       final_message: ${{ steps.run_codex.outputs.final-message }}
