--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -27,6 +27,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          safety-strategy: read-only
           output-schema-file: .github/schema/review.json
           allow-bots: true
           prompt: |
