--- a/.github/workflows/question.yml
+++ b/.github/workflows/question.yml
@@ -38,6 +38,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          safety-strategy: read-only
           prompt: |
             ${{ needs.prepare.outputs.body }}
   add_comment:
