--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -8,9 +8,7 @@ jobs:
     if: contains(github.event.issue.labels.*.name, 'requirements')
     permissions:
       contents: read
-      issues: read
-    outputs:
-      final_message: ${{ steps.run_codex.outputs.final-message }}
+      issues: write
 
     steps:
       - name: Checkout Repository
@@ -18,19 +16,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Update Requirements Document
-        id: run_codex
-        uses: openai/codex-action@v1
+      - name: Update Requirements Document with Claude
+        uses: anthropics/claude-code-action@v1
         with:
-          openai-api-key: ${{ secrets.OPENAI_API_KEY }}
-          safety-strategy: read-only
-          codex-args: |
-            --enable web_search_request
+          anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
+          settings: .github/claude/requirements-settings.json
           prompt: |
-            You are helping maintain a structured software requirements document for this repository.
+            REPO: ${{ github.repository }}
+            ISSUE NUMBER: ${{ github.event.issue.number }}
 
-            Repository: ${{ github.repository }}
-            Issue #: ${{ github.event.issue.number }}
+            You are helping maintain a structured software requirements document for this repository, and should update the issue body in place.
+
             Comment author: ${{ github.event.comment.user.login }}
 
             Current requirements document (issue body):
@@ -51,35 +47,9 @@ jobs:
             - Analyze the checked-out repository (file structure and relevant code) to infer how this comment affects the expected change scope (features, modules, files) and reflect that in the document.
             - Do not ask the user which files to change or what the "scope of changes" is; instead, update any "Affected Components / Files" (or similar) section with concrete candidate components/files based on the repository.
             - If the comment raises new questions or uncertainties that cannot be resolved from the repository, add or update an "Open Questions" section instead of guessing.
-            - When using web search, restrict yourself to documentation on `docs.github.com` and do not access any other external domains.
+            - When using web search from within Claude, follow the project settings file and avoid unnecessary external requests.
 
             Output:
-            - Return the full updated requirements document in Markdown.
+            - Apply the updated requirements document directly by editing the GitHub issue body using `gh issue edit`.
             - Keep headings and numbering consistent and easy to follow.
             - Do not include any explanation outside of the updated document itself.
-
-  update_issue:
-    runs-on: ubuntu-latest
-    needs: update_requirements
-    permissions:
-      issues: write
-    steps:
-      - name: Get Token
-        uses: actions/create-github-app-token@v2
-        id: app-token
-        with:
-          app-id: ${{ vars.APP_ID }}
-          private-key: ${{ secrets.PRIVATE_KEY }}
-      - name: Update Issue Body
-        env:
-          CODEX_FINAL_MESSAGE: ${{ needs.update_requirements.outputs.final_message }}
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ steps.app-token.outputs.token }}
-          script: |
-            await github.rest.issues.update({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.payload.issue.number,
-              body: process.env.CODEX_FINAL_MESSAGE
-            });
