--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -20,7 +20,7 @@ jobs:
         uses: anthropics/claude-code-action@v1
         with:
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
-          settings: .github/claude/requirements-settings.json
+          allowed_tools: "Read(src/**),Read(package.json),Read(README.md),Bash(rg:*),Bash(gh issue edit:*),WebFetch(domain:github.com),WebFetch(domain:vitest.dev),WebSearch(domain:github.com),WebSearch(domain:vitest.dev)"
           prompt: |
             REPO: ${{ github.repository }}
             ISSUE NUMBER: ${{ github.event.issue.number }}
