--- a/.github/workflows/create-requirements.yml
+++ b/.github/workflows/create-requirements.yml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
 
       - name: Format Requirements Issue with Claude
-        uses: anthropics/claude-code-action@v1
+        uses: anthropics/claude-code-action@main
         with:
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
           allowed_tools: "Read(src/**),Read(package.json),Read(README.md),Bash(rg:*),Bash(gh issue edit:*),WebFetch(domain:github.com),WebFetch(domain:vitest.dev),WebSearch(domain:github.com),WebSearch(domain:vitest.dev)"
