--- a/.github/workflows/create-requirements.yml
+++ b/.github/workflows/create-requirements.yml
@@ -30,6 +30,8 @@ jobs:
         with:
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
           settings: .github/claude/requirements-settings.json
+          claude-args: |
+            --mcp-config .github/claude/mcp-config.json
           prompt: |
             REPO: ${{ github.repository }}
             ISSUE NUMBER: ${{ github.event.issue.number }}
