--- a/.github/workflows/create-requirements.yml
+++ b/.github/workflows/create-requirements.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Format Requirements Issue with Claude
         uses: anthropics/claude-code-action@v1
         env:
-          MCP_GITHUB_ACCESS_TOKEN: ${{ steps.app-token.outputs.token }}
+          GITHUB_PERSONAL_ACCESS_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
-          settings: .github/claude/requirements-settings.json
+          settings: .claude/settings.json
           prompt: |
             REPO: ${{ github.repository }}
             ISSUE NUMBER: ${{ github.event.issue.number }}
