--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -29,7 +29,9 @@ jobs:
           GITHUB_PERSONAL_ACCESS_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
-          settings: .claude/settings.json
+          settings: .github/claude/requirements/settings.json
+          claude_args:
+            --mcp_config .github/claude/requirements/mcp-config.json 
           prompt: |
             REPO: ${{ github.repository }}
             ISSUE NUMBER: ${{ github.event.issue.number }}
