--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -71,8 +71,8 @@ jobs:
         uses: actions/create-github-app-token@v2
         id: app-token
         with:
-          app-id: ${{ vars.APP_ID }}
-          private-key: ${{ secrets.PRIVATE_KEY }}
+          app-id: ${{ vars.REVIEW_BOT_APP_ID }}
+          private-key: ${{ secrets.REVIEW_BOT_PRIVATE_KEY }}
       - name: Submit Review
         uses: actions/github-script@v7
         env:
