--- a/.github/workflows/code-auto-write.yml
+++ b/.github/workflows/code-auto-write.yml
@@ -71,8 +71,8 @@ jobs:
         uses: actions/create-github-app-token@v2
         id: app-token
         with:
-          app-id: ${{ vars.APP_ID }}
-          private-key: ${{ secrets.PRIVATE_KEY }}
+          app-id: ${{ vars.WORKFLOW_BOT_APP_ID }}
+          private-key: ${{ secrets.WORKFLOW_BOT_PRIVATE_KEY }}
 
       - name: create pull request
         uses: actions/github-script@v7
