--- a/.github/workflows/code-review-fix.yml
+++ b/.github/workflows/code-review-fix.yml
@@ -21,8 +21,8 @@ jobs:
         uses: actions/create-github-app-token@v2
         id: app-token
         with:
-          app-id: ${{ vars.APP_ID }}
-          private-key: ${{ secrets.PRIVATE_KEY }}
+          app-id: ${{ vars.WORKFLOW_BOT_APP_ID }}
+          private-key: ${{ secrets.WORKFLOW_BOT_PRIVATE_KEY }}
 
       - name: Get all review comments
         id: get_reviews
